- packet_outMangle/$switch hook is now called before openkore's built-in
  mangling, to give plugins more freedom.
- packet_attack hook now has extra 'type' argument.
- all receive packets have been moved to Receive.pm now.

Credits:
- id-mardi: fix for setPartySkillTimer, move the rest of the receive packets
  to Receive.pm
- mondlicht: teleportAuto_avoidAllPlayers bugfix
- Lor_Balmon: fix for the Win32 GUI interface


==================
### 1.9.0
==================

*** INCOMPATIBLE CHANGES ***:
- NPC IDs are no longer supported, you must use the location syntax.
- A few more statuses have been renamed such as 'Cartboost' status renamed
  to 'Cart Boost' for consistency with the skill name.
  'Hide' to 'Hiding', too.
- \$remote_socket parameter removed from some Network/Send.pm functions:
  sendCartAdd sendCartGet
- hp, sp options now have a new format.
  hp > 50  - means more than 50hp
  hp > 50% - means more than 50 percent of you hp.
- Old hp_upper,sp_upper removed, use hp sp instead
  Old minAggressives, maxAggressives skill block options removed.
  Use aggressives instead.
- You must use the new tables/emotions.txt or emotions won't work.
  The "e" command now uses the RO client commands instead of the number.
- Vigor condensation renamed to Vigor Condensation for consistency
- equipAuto onTeleport changed to teleportAuto_equip_{slot}
  equipAuto skills is no longer used, use <skill slot>_equip_<slot>
  equipAuto syntax is changed, read below.
  equipAuto_def is removed.
- spells.txt "Big Magic (SG/LoV/MS/GX)" renamed to "Big Magic".
- avoid_ignore_# is replaced with avoidGM_ignoreList (see below)
- equipAuto misses changed to target_misses
  equipAuto totalMisses changed to target_totalMisses
- 'party create "<party_name>"' command renamed to
  'party create <party_name>'.
- 'Pink Spring' renamed to "Roki's Weil" to match the skill name
  in spells.txt (for whenGround/whenNotGround).
- All FileParsers must return 1 if the file was parsed successfully.